syntax = "proto3";

package recordadder;

import "github.com/brotherlogic/godiscogs/godiscogs.proto";

message Config {
  repeated godiscogs.Release queue = 1;
  int64 last_addition = 2;
}

message AddRecordRequest {
  int32 id = 1;
  int32 cost = 2;
  int32 folder = 3;
}

message AddRecordResponse {
  int64 expected_addition_date = 1;
}

service WantService {
  rpc AddRecord(AddRecordRequest) returns (AddRecordResponse) {};
}